--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     color: #182153;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 10px;
     background-color: rgb(245, 241, 241);
 
