--- a/style.css
+++ b/style.css
@@ -214,5 +214,6 @@ a {
 #rodape{
     text-align: center;
     color: #07080e;
+    font-family: 'Times New Roman', sans-serif;
     font-size:11px;
 }
