--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     color: #182153;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
-    background-color: rgb(245, 241, 241);
+    background-color: lightgrey;
 
 }
 
@@ -213,7 +213,6 @@ a {
 
 #rodape{
     text-align: center;
-    color: #07080e;
-    font-family: 'Times New Roman', sans-serif;
-    font-size:11px;
+
+    
 }
